# Hospedex-V2

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  components.json  design-qa.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
apps/admin/: next.config.ts  package.json  tsconfig.json  vercel.json
apps/gestao/: package.json
apps/marketplace/: next.config.ts  package.json
database/supabase/: README.md  config.toml
docs/: ROADMAP.md  SECURITY.md  SETUP.md
docs/adr/: 0001-base-monorepo.md
docs/product/: commercial-model.md  stage-1-scope.md
services/api/: pyproject.toml
services/api-python/: pyproject.toml
services/api-python/api/: __init__.py  main.py  router.py
services/api-python/api/v1/: health.py  router.py
services/api-python/core/: config.py  logs.py
services/api-python/db/: __init__.py  conexao.py
services/api-python/dependencies/: __init__.py  banco.py  contexto.py
services/api-python/middlewares/: __init__.py  contexto_requisicao.py
services/api-python/models/: __init__.py  contexto.py
services/api-python/schemas/: __init__.py  health.py
services/api-python/services/: __init__.py  autenticacao.py  contexto_usuario.py
services/api-python/utils/: __init__.py  ids.py
services/api/app/: __init__.py  main.py
services/api/app/api/: router.py
services/api/app/api/v1/: auth.py  health.py
services/api/app/core/: auth.py  config.py  database.py  security.py
services/api/app/modules/feature_flags/: __init__.py
services/api/app/modules/properties/: __init__.py
services/api/app/modules/tenancy/: __init__.py
services/api/app/modules/users/: __init__.py
services/api/hospedex_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+511 files in other folders)
