[project]
name = "hospedex-api"
version = "0.1.0"
description = "FastAPI foundation for Hospedex V2."
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.31.0",
  "fastapi>=0.136.3",
  "openai>=2.41.1",
  "PyJWT>=2.10.1",
  "pydantic-settings>=2.14.1",
  "redis>=8.0.0",
  "sqlalchemy[asyncio]>=2.0.45",
  "supabase>=2.31.0",
  "uvicorn[standard]>=0.49.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=2.1.0",
  "pytest>=9.0.0",
  "ruff>=0.15.17"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
